# xserver-pointer-accel

./: .gitignore  input.h  main.c  meson.build  ptrveloc.c  ptrveloc.h  synaptics.c  valuator-mask.c  valuator-mask.h
data/: generate-data-files.sh  profile-libinput-speeds.gnuplot  profile-simple-with-libinput-configured-accel.gnuplot  profile-simple-with-libinput-configured-deceleration.gnuplot  profile-simple-with-libinput-configured-threshold.gnuplot  profile-simple-with-libinput.gnuplot  profile-simple.gnuplot  profile-synaptics-accelfct.gnuplot  profile-synaptics-diag.gnuplot  profile-synaptics-libinput-1000.gnuplot  profile-synaptics-libinput.gnuplot  profile-synaptics-maxs.gnuplot  profile-synaptics-mins-and-maxs.gnuplot  profile-synaptics-mins.gnuplot  profile-synaptics-with-libinput-configured-1000.gnuplot  profile-synaptics-with-libinput-configured.gnuplot  profile-synaptics.gnuplot  profiles-classic-accel.gnuplot  profiles-classic-deceleration.gnuplot  profiles-classic-thresholds.gnuplot  profiles.gnuplot
